--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CSS</title>
+        <meta name="keywords" content="form html, form css, form js, luuull, luuull github, metatags test"> 
+        <meta name="description" content="form idea made with the basic languages html, css and js">
+        <meta name="description" content="author:luuull">
+        <meta name="author" content="luuull">
+        <meta name="robots" content="index">
+        <title>Form idea</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
