--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="keywords" content="form html, form css, form js, luuull, luuull github, metatags test"> 
-        <meta name="description" content="form idea made with the three main languages html, css and js">
-        <meta name="description" content="author:luuull">
-        <meta name="author" content="luuull">
-        <meta name="robots" content="index">
         <title>Form idea</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <div class="bg">
             <h1>Formulário</h1>
-            <form method="post">
+            <form action="index.html" method="get" target="https://luuull.github.io/form">
                 <fieldset>
                     <div>
                         <label for="name">Nome:</label>
@@ -42,7 +37,7 @@
                         <textarea id="msg"></textarea>
                     </div>
                     <div class="button">
-                        <input class="btn btn-primary" id="button" type="button" value="Enviar">
+                        <input class="btn btn-primary" id="button" type="submit" value="Enviar">
                     </div>
                 </fieldset>                
             </form>
