--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="bg">
             <h1>Formulário</h1>
-            <form action="index.html" method="get" target="https://luuull.github.io/form">
+            <form action="index.html" method="get" target="">
                 <fieldset>
                     <div>
                         <label for="name">Nome:</label>
