--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         
                     </div>
                     <div>
-                        <label for="msg">Mensagem:</label>
+                        <label for="msg" class="msg">Mensagem:</label>
                         <textarea id="msg"></textarea>
                     </div>
                     <div class="button">
